theme.css
/*TODO: Make the selection boxes not glitch out of the rounded corners (buttons and settings on vault dockor for example) */

body {
	--radius-s: 0px;
	--radius-m: 0px;
	--radius-l: 0px;
	--input-radius: 0px;
	--tab-radius-active: 0px;
	--checkbox-radius: 0px;
	--toggle-radius: 0px;
	--toggle-thumb-radius: 0px;
	--slider-thumb-radius: 0px;

	/* --------- Text Settings --------- */
	--font-text-theme: "Atkinson Hyperlegible", "Segoe UI", sans-serif;

	/* Text Colour */
	--pelucid-white-text: #ffffff;
	--pellucid-bold-text: #f6cd6f;

	--text-normal: var(--pelucid-white-text);
	--text-muted: var(--pelucid-white-text);
	--text-faint: var(--pelucid-white-text);
	/* --text-accent: var(--pelucid-white-text); */
	/* --text-accent-hover: var(--pelucid-white-text); */
	--text-on-accent: var(--pelucid-white-text);
	--text-on-accent-inverted: var(--pelucid-white-text);
	--text-selection: rgba(255, 255, 255, 0.18);
	--text-highlight-bg: rgba(255, 255, 255, 0.20);
	--text-highlight-bg-active: rgba(255, 255, 255, 0.28);
	--text-error: #ff8a8a;
	--text-warning: #ffd28a;
	--text-success: #a8f0c6;
	--bold-color: var(--pellucid-bold-text);

	/* Heading Colour */
	--h1-color: #ff8a8a;
	--h2-color: #ffd28a;
	--h3-color: #fff08a;
	--h4-color: #a8f0c6;
	--h5-color: #9fd8ff;
	--h6-color: #d8b4ff;

	/* Link Colour */
	/* --link-color: var(--pelucid-white-text); */
	/* --link-color-hover: var(--pelucid-white-text); */
	/* --link-external-color: var(--pelucid-white-text); */
	/* --link-external-color-hover: var(--pelucid-white-text); */
	/* --link-unresolved-color: var(--pelucid-white-text); */
	--link-unresolved-opacity: 0.7;

	/* Tag Colour */
	--tag-color: var(--pelucid-white-text);
	--tag-color-hover: var(--pelucid-white-text);

	/* Make titlebar elements transparent (override in misc section if needed)*/
	--tab-container-background: transparent;
	--titlebar-background: transparent;
	--titlebar-background-focused: transparent;

	/* --------- Glass settings --------- */
	/* Glass Opacity */
	--pellucid-glass-opacity-clear: 0.0;
	--pellucid-glass-opacity-low: 0.20;
	--pellucid-glass-opacity-medium: 0.35;
	--pellucid-glass-opacity-high: 0.65;

	--pellucid-glass-opacity-menu:0.70;

	/* Glass Blur */
	--pellucid-glass-blur: 6px;
	--pellucid-glass-blur-high: 16px;
	--pellucid-glass-button-blur: 6px;

	/* Specific Control Variables */
	--pellucid-glass-bg: rgb(from var(--pellucid-glass-source) r g b / var(--pellucid-glass-opacity-high));
	--pellucid-glass-bg-hover: rgb(from var(--pellucid-glass-source) r g b / var(--pellucid-glass-opacity-medium));
	--pellucid-glass-button-bg: rgb(from var(--pellucid-glass-source) r g b / 0.58);
	--pellucid-glass-button-bg-hover: rgb(from var(--pellucid-glass-source) r g b / 0.48);
	--pellucid-glass-menu: rgb(from var(--pellucid-glass-source-menu) r g b / var(--pellucid-glass-opacity-menu));
	--pellucid-glass-menu-fill: linear-gradient(var(--pellucid-glass-menu), var(--pellucid-glass-menu));
	--pellucid-glass-clear: rgb(0 0 0 / var(--pellucid-glass-opacity-clear));

	--pellucid-glass-filter: blur(var(--pellucid-glass-blur));
	--pellucid-glass-button-filter: blur(var(--pellucid-glass-blur));;
	--pellucid-glass-filter-menu: blur(var(--pellucid-glass-blur-high));


	--pellucid-glass-border: 1px solid rgba(255, 255, 255, var(--pellucid-glass-opacity-medium));
	--pellucid-glass-table-border: 1px solid rgba(255, 255, 255, var(--pellucid-glass-opacity-high));
	--pellucid-glass-border-hover: rgba(255, 255, 255, var(--pellucid-glass-opacity-high));

	/* Obsidian Interface Colour */
	--icon-color: var(--pelucid-white-text);
	--icon-color-hover: var(--pelucid-white-text);
	--icon-color-active: var(--pelucid-white-text);

	--nav-item-color: var(--pelucid-white-text);
	--nav-item-color-hover: var(--pelucid-white-text);
	--nav-item-color-active: var(--pelucid-white-text);

	--tab-text-color: var(--pelucid-white-text);
	--tab-text-color-focused: var(--pelucid-white-text);
	--tab-text-color-focused-active: var(--pelucid-white-text);

	--pellucid-glass-hover-transition:
		background-color 120ms ease,
		border-color 120ms ease;

	/* Positioning */
	--default-button-gap: 3px;
	--workspace-button-size: 29px;
	--ribbon-collapse-glass-height: 39px;

	--workspace-tab-button-height: calc(var(--workspace-button-size) - 2px);
	--workspace-tab-button-gap: var(--default-button-gap);
}

:root {
	--input-focus-border-color: Highlight;
	--input-focus-outline: 1px solid Canvas;
	--input-unfocused-border-color: transparent;
	--input-disabled-border-color: transparent;
}

/* =============================== */
/* Text Global Variables */
/* =============================== */

.markdown-rendered strong,
.cm-strong {
	color: var(--bold-color);
}

/* =============================== */
/* Dark and Light Global Variables */
/* =============================== */

.theme-dark {
	--pellucid-glass-source: rgb(43, 40, 40);
	--pellucid-glass-source-menu: rgb(15, 15, 15);

	/*
		--background-primary-colour: rgb(55, 51, 51);
	--background-primary: rgb(from var(--background-primary-colour) r g b / var(--pellucid-glass-opacity-medium));

	--background-secondary: rgba(29, 29, 29, var(--pellucid-glass-opacity-high));
	--ribbon-background: rgb(113, 70, 70);
	*/

	--background-primary: transparent;
	--background-secondary: transparent;
}

.theme-light {
	--pellucid-glass-source: rgb(236, 228, 255);
	--pellucid-glass-source-menu: rgb(236, 228, 255);
	--background-primary-colour: var(--pellucid-glass-source);
	--background-primary: rgba(236, 228, 255, var(--pellucid-glass-opacity-medium));
	--background-secondary: rgba(217, 201, 255, var(--pellucid-glass-opacity-medium));
	--ribbon-background: rgb(113, 70, 70);
}

/* Canvas Dotted Background */
.theme-dark .canvas-background circle {
	r: 1.0;
	fill: rgba(255, 255, 255, 0.35);
}

.theme-light .canvas-background circle {
	r: 1.0;
	fill: rgba(0, 0, 0, 0.25);
}
/* ... */

